# modelexpress

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS_Rust.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.bench-python  NOTICES  README.md  SECURITY.md  about.toml  deny.toml  design.md  docker-compose-registry.yml  docker-compose.yml  dpkg_arm64.csv  entrypoint.sh  goal.md  k8s-deployment-local.yaml  k8s-deployment.yaml  local-docker-registry.sh  model-express-cli-completion.bash  modelexpress-cli-completion.bash  monitor_vllm_logs.sh  run_integration_tests.sh  rust-toolchain.toml  rustfmt.toml  test_client.sh  test_grpc_transfer_k8s.sh  test_multinode_k8s.sh
model_express_client/: Cargo.toml
model_express_client/src/: cache_config.rs  config.rs  error.rs  lib.rs
model_express_common/: Cargo.toml  build.rs
model_express_common/proto/: health.proto
model_express_common/src/: cache.rs  client_config.rs  config.rs  download.rs  lib.rs  models.rs  providers.rs
model_express_common/src/providers/: huggingface.rs
model_express_server/: Cargo.toml
model_express_server/src/: cache.rs  config.rs  database.rs  lib.rs  main.rs  routes.rs  services.rs
modelexpress_bench/: Cargo.toml
modelexpress_bench/python/: pyproject.toml
modelexpress_bench/python/modelexpress_bench/: __init__.py  model_name.py  server_main.py  synthetic_servicer.py
modelexpress_bench/src/: bench_service.rs  lib.rs  model_name.rs  validation.rs
modelexpress_client/: Cargo.toml
modelexpress_client/go/: README.md  generate_proto.sh  go.mod
modelexpress_client/python/: .gitignore  README.md  generate_proto.sh  pyproject.toml  setup.py
modelexpress_client/python/benchmarks/: README.md  __init__.py  bench_elastic_scaling.py  bench_moe_ep_fanout.py  bench_non_expert_rank_to_rank.py  bench_verl_rank_to_rank.py  run_cluster_bench.sh  source_selection_sim.py
modelexpress_client/python/kademlite/: __init__.py  connection.py  crypto.py  dht.py  dht_bootstrap.py  dht_identify.py  dht_maintenance.py  dht_queries.py  dht_utils.py  identify.py  k8s_lease.py  kad_handler.py  kademlia.py  listener.py  mdns.py  multiaddr.py  multistream.py  noise.py  peer_store.py  routing.py  slurm.py  yamux.py
modelexpress_client/python/modelexpress/: __init__.py  _vmm_alloc_ext.cpp  accelerator_backend.py  adapter.py  auth.py  client.py  client_factory.py  dht_client.py  dht_seed.py  envs.py  gds_constants.py  gds_loader.py  gds_transfer.py  gms_loader.py  gms_sidecar.py  heartbeat.py  k8s_service_client.py  lifecycle.py  m2n_bootstrap_pb2.py  m2n_bootstrap_pb2_grpc.py  megatron_helpers.py  megatron_translator.py  metadata.py  metadata_client.py  metrics.py  model_pb2.py  model_pb2_grpc.py  nemo_rl_v2.py  nic_metrics.py  nixl_transfer.py  p2p_pb2.py  p2p_pb2_grpc.py  peer_direct_client.py  peer_model_service.py  rank_local_publisher.py  rank_utils.py  refit_crossnode.py  refit_distributed_trainer_publication_smoke.py  refit_level5.py  refit_live_mx.py  (+70 more)
modelexpress_client/python/scripts/: v2_dtensor_e2e_demo.py  v2_moe_e2e_demo.py
modelexpress_client/python/tests/: _verl_runtime_harness.py  conftest.py  test_accelerator_backend.py  test_adapter.py  test_artifact_manifest.py  test_artifact_transfer.py  test_auth.py  test_bench_elastic_scaling.py  test_client.py  test_client_factory.py  test_client_transfer_lease.py  test_delta_publish.py  test_delta_visibility.py  test_dht_client.py  test_dht_client_leases.py  test_e2e_nccl_m2n.py  test_e2e_primerl.py  test_envs.py  test_gds_loader.py  test_gds_transfer.py  test_gms_config.py  test_gms_init.py  test_gms_loader.py  test_gms_main.py  test_gms_sidecar.py  test_heartbeat.py  test_identity.py  test_instant_tensor_strategy.py  test_k8s_service_client.py  test_lifecycle.py  test_m2n.py  test_m2n_bootstrap.py  test_m2n_test_coordinator.py  test_mdl_fp8.py  test_mdl_tp.py  test_megatron_helpers.py  test_megatron_translator.py  test_metrics.py  test_model_streamer_strategy.py  test_mx_hooks.py  (+97 more)
modelexpress_client/src/: auth.rs  error.rs  lib.rs
modelexpress_common/: Cargo.toml  build.rs
modelexpress_common/proto/: api.proto  health.proto  m2n_bootstrap.proto  model.proto  p2p.proto  transfer.proto  weight_sync.proto
modelexpress_common/src/: artifact_manifest.rs  cache.rs  client_config.rs  config.rs  download.rs  envs.rs  lib.rs  models.rs  providers.rs  test_support.rs
modelexpress_common/src/providers/: gcs.rs  huggingface.rs  local.rs  model_streamer.rs  ngc.rs  oci.rs  s3.rs
modelexpress_server/: Cargo.toml
modelexpress_server/src/: auth.rs  backend_config.rs  cache.rs  config.rs  database.rs  dht.rs  k8s_types.rs  lib.rs  m2n_bootstrap.rs  main.rs  metadata_backend.rs  p2p.rs  p2p_service.rs  reaper.rs  registry.rs  server.rs  services.rs  source_identity.rs  state.rs  weight_sync.rs
modelexpress_server/tests/: auth_e2e.rs  in_process_server.rs
mx_libp2p/: pyproject.toml
mx_libp2p/mx_libp2p/: __init__.py  connection.py  crypto.py  dht.py  dht_bootstrap.py  dht_identify.py  dht_maintenance.py  dht_queries.py  dht_utils.py  identify.py  kad_handler.py  kademlia.py  listener.py  multiaddr.py  multistream.py  noise.py  peer_store.py  routing.py  yamux.py
mx_peer_discovery/: Cargo.toml
mx_peer_discovery/src/: dns.rs  lib.rs  mdns.rs  slurm.rs  static_peers.rs
mx_peer_discovery_interop/: pyproject.toml
mx_peer_discovery_interop/tests/: test_interop.py
mx_peer_discovery_py/: pyproject.toml
mx_peer_discovery_py/mx_peer_discovery/: __init__.py  dns.py  mdns.py  slurm.py  static.py
mx_peer_discovery_py/tests/: test_dns.py  test_mdns.py  test_slurm.py  test_static.py
mxclient/: Cargo.toml
mxclient/src/: main.rs
sidecar/: pyproject.toml  requirements.txt
sidecar/tests/: __init__.py  test_api.py  test_s3_integration.py
workspace-tests/: Cargo.toml
workspace-tests/benches/: performance.rs
workspace-tests/tests/: artifact_transfer_contract.rs  integration_tests.rs  k8s_multinode_tests.rs  registry_backend_redis.rs
(+741 files in other folders)
