[workspace]
members = [
    "model_express_server",
    "model_express_client",
    "model_express_common",
    "workspace-tests",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hf-hub = { version = "0.4.3", default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
once_cell = "1.21.3"
prost = "0.13"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.17", features = ["v4", "serde"] }
thiserror = "2.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
#pedantic = { level = "deny", priority = -1 }
#cargo = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
mod_module_files = "deny"
self_named_module_files = "allow"
alloc_instead_of_core = "deny"
arithmetic_side_effects = "deny"
pub_use = "allow"
pub_without_shorthand = "deny"
pub_with_shorthand = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
single_call_fn = "allow"
question_mark_used = "allow"
print_stdout = "allow"
use_debug = "allow"
todo = "allow"
shadow_same = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
unwrap_used = "deny"
expect_used = "deny"
allow_attributes = "allow"
missing_errors_doc = "allow"


[workspace.lints.rust]
#missing_docs = "warn"
