# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    # Directory names remain for path, but crates are published as:
    "modelexpress_server", # modelexpress-server
    "modelexpress_client", # modelexpress-client
    "modelexpress_common", # modelexpress-common
    "workspace-tests",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Model Express: High-performance model serving and management"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/modelexpress"
repository = "https://github.com/ai-dynamo/modelexpress.git"
keywords = ["llm", "inference", "nvidia"]

[workspace.dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }
colored = "3.0.0"
hf-hub = { version = "0.4.3", default-features = false, features = [
    "tokio",
    "rustls-tls",
] }
jiff = { version = "0.2.15", features = ["serde"] }
modelexpress-common = { path = "modelexpress_common", version = "0.3.0" }
modelexpress-client = { path = "modelexpress_client", version = "0.3.0" }
modelexpress-server = { path = "modelexpress_server", version = "0.3.0" }
once_cell = "1.21.3"
prost = "0.13"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.17", features = ["v4", "serde"] }
thiserror = "2.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
urlencoding = "2.1"

# Kubernetes client (kube-rs) for CRD-based metadata backend
kube = { version = "0.98", features = [
    "client",
    "runtime",
    "derive",
    "rustls-tls",
], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
schemars = "0.8"
base64 = "0.22"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
#pedantic = { level = "deny", priority = -1 }
#cargo = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
mod_module_files = "deny"
self_named_module_files = "allow"
alloc_instead_of_core = "deny"
arithmetic_side_effects = "deny"
pub_use = "allow"
pub_without_shorthand = "deny"
pub_with_shorthand = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
single_call_fn = "allow"
question_mark_used = "allow"
print_stdout = "allow"
use_debug = "allow"
todo = "allow"
shadow_same = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
unwrap_used = "deny"
expect_used = "deny"
allow_attributes = "allow"
missing_errors_doc = "allow"


[workspace.lints.rust]
#missing_docs = "warn"
