[package]
name = "model_express_client"
version = "0.1.0"
edition = "2024"

[dependencies]
model_express_common = { path = "../model_express_common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"

[dev-dependencies]
tokio-test = "0.4"
tonic-build = { workspace = true }
tempfile = "3.20"

[lints]
workspace = true

[[bin]]
name = "model-express-cli"
path = "src/bin/cli.rs"
