# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "modelexpress-client"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Client library for Model Express gRPC server"
repository = "https://github.com/ai-dynamo/modelexpress"

[dependencies]
modelexpress-common = "0.1.0"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tonic-build = { workspace = true }
tempfile = "3.20"

[lints]
workspace = true

[[bin]]
name = "model-express-cli"
path = "src/bin/cli.rs"
