[package]
name = "model_express_common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
tokio-test = "0.4"

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true