# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "model_express_common"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared utilities for Model Express client and server"
repository = "https://github.com/ai-dynamo/modelexpress"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = "2.0"
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
mockall = "0.13"
tempfile = "3.20"
tokio-test = "0.4"

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
