[package]
name = "model_express_server"
version = "0.1.0"
edition = "2024"

[dependencies]
model_express_common = { path = "../model_express_common" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tonic-build = { workspace = true }

[lints]
workspace = true