# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "modelexpress-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance gRPC server for model serving and management"
repository = "https://github.com/ai-dynamo/modelexpress"

[dependencies]
modelexpress-common = "0.1.0"
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = "0.9"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"
tonic-build = { workspace = true }

[lints]
workspace = true
