# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "modelexpress-server"
description = "High-performance gRPC server for model serving and management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
modelexpress-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = "0.9"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }

# Kubernetes client for CRD-based metadata backend
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"
tonic-build = { workspace = true }

[lints]
workspace = true
