# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "modelexpress-server"
description = "High-performance gRPC server for model serving and management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true


[features]
# In-memory backend for tests and local dev (MX_METADATA_BACKEND=memory). Off by
# default; enable explicitly with `--features memory-backend` to run its unit tests.
memory-backend = []
# Gates the in-process integration tests, which boot a server and are slower. Enables
# memory-backend because the test boots run_server with MX_METADATA_BACKEND=memory.
integration-tests = ["memory-backend"]

[dependencies]
modelexpress-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
jiff = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = "0.9"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }

# Kubernetes client for CRD-based metadata backend
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tonic-health = { workspace = true }
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "kad", "identify", "tokio", "macros"] }
thiserror = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
moka = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
modelexpress-common = { workspace = true, features = ["test-support"] }
mockall = { workspace = true }
tempfile = "3.20"
tokio-test = "0.4"
tonic-build = { workspace = true }
modelexpress-client.workspace = true

[[test]]
name = "in_process_server"
path = "tests/in_process_server.rs"
required-features = ["integration-tests"]

[[test]]
name = "auth_e2e"
path = "tests/auth_e2e.rs"
required-features = ["integration-tests"]

[lints]
workspace = true
