# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "mx-peer-discovery"
description = "Peer discovery substrate probes (mDNS, SLURM, DNS) for ModelExpress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]

[dev-dependencies]

[lints]
workspace = true
