# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "mx-peer-discovery"
version = "0.1.0"
description = "Peer discovery substrate probes (mDNS, SLURM, DNS) for ModelExpress"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "zeroconf>=0.148.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
