# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "model-express-workspace-tests"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Tests for Model Express workspace"
publish = false

[dependencies]
modelexpress-client = { path = "../model_express_client", version = "0.1.0" }
modelexpress-common = { path = "../model_express_common", version = "0.1.0" }
modelexpress-server = { path = "../model_express_server", version = "0.1.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false


[lints]
workspace = true
