# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "model-express-workspace-tests"
description = "Tests for Model Express workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
modelexpress-client = { workspace = true }
modelexpress-common = { workspace = true }
modelexpress-server = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false


[lints]
workspace = true
