# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "model-express-workspace-tests"
description = "Tests for Model Express workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[features]
default = ["gcs", "tls-rustls"]
openssl = ["tls-openssl"]
gcs = [
    "modelexpress-client/gcs",
    "modelexpress-common/gcs",
    "modelexpress-server/gcs",
]
tls-openssl = [
    "kube/openssl-tls",
    "modelexpress-client/tls-native",
    "modelexpress-common/tls-native",
    "modelexpress-server/tls-openssl",
]
tls-rustls = [
    "kube/rustls-tls",
    "modelexpress-client/tls-rustls",
    "modelexpress-common/tls-rustls",
    "modelexpress-server/tls-rustls",
]

[dependencies]
modelexpress-client = { workspace = true, default-features = false }
modelexpress-common = { workspace = true, default-features = false }
modelexpress-server = { workspace = true, default-features = false }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kube = { workspace = true, features = ["ws"] }
k8s-openapi = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
redis = { workspace = true }
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false


[lints]
workspace = true
