# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelexpress-bench"
version = "0.3.0"
description = "Benchmark harness for ModelExpress Python peer ModelService"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "NVIDIA Corporation", email = "sw-dl-dynamo@nvidia.com" }]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers"]
dependencies = [
    "grpcio>=1.66.2",
    "modelexpress",
    "protobuf>=5.27.0,<6.0.0",
]

[tool.setuptools]
packages = ["modelexpress_bench"]

[tool.setuptools.package-dir]
modelexpress_bench = "modelexpress_bench"
